# firm_managment

front/firm-front/: README.md  env.d.ts  index.html  package-lock.json  package.json  vite.config.ts
front/firm-front/src/: App.vue  inject.ts
front/firm-front/src/assets/: base.css
front/firm-front/src/components/: AddFirm.vue  Dialog.vue  Login.vue  ToolTip.vue  UpdateFirm.vue
front/firm-front/src/components/icons/: IconLoading.vue
front/firm-front/src/models/: api.ts  index.ts
front/firm-front/src/router/: index.ts
front/firm-front/src/views/: DeviceHard.vue  DeviceSoft.vue  HomeView.vue  Login.vue
server/: .gitignore  Cargo.toml
server/migrations/: init.sql
server/src/: main.rs
server/src/controller/: mod.rs
server/src/domain/dto/: mod.rs
server/src/domain/vo/: mod.rs
server/src/service/: mod.rs
server/src/utils/: jwt.rs  mod.rs  sql_helper.rs
src/controller/: mod.rs
src/domain/dto/: mod.rs
src/domain/vo/: mod.rs
src/service/: mod.rs
src/utils/: sql_helper.rs
