[package]
name = "firm_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.12"
poem-openapi = { version = "1.3.12", features = ["swagger-ui", "chrono"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.9"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls","sqlite","chrono", ] }
#serde and base types
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
once_cell = "1.7.2"
#log
env_logger = "0.9.0"
thiserror = "1.0.24"
#jwt
jsonwebtoken = "8.0.1"
bcrypt="0.12.0"

lazy_static = "1.4.0"
rust-crypto = "0.2.36"